# miromem

./: .env  .env.template  .gitignore  Dockerfile  README.md  __init__.py  docker-compose.yaml  pyproject.toml
.github/workflows/: frontend-e2e.yml
bridge/: __init__.py  memory_client.py  models.py  zep_adapter.py
config/: __init__.py  evermemos.env  frontend.env  mirofish.env  settings.py
docs/superpowers/plans/: 2026-03-24-graphiti-migration.md  2026-03-24-thinker-orchestrator.md  (+1 more)
evolution/: __init__.py  agent_evolution.py  api.py  foresight_validator.py  sim_memory_store.py
gateway/: __init__.py  app.py
graph/: __init__.py  api.py  entity_extractor.py  graph_rag.py  graph_store.py  models.py
graph_service/: Dockerfile  __init__.py  app.py  models.py
graph_service/api/: __init__.py  graphs.py  health.py  jobs.py
graph_service/core/: __init__.py  config.py  graphiti_factory.py  providers.py
graph_service/domain/: __init__.py  episode_builder.py  query_service.py  schema_compiler.py  snapshot_serializer.py
graph_service/storage/: __init__.py  graph_metadata_store.py  job_store.py  snapshot_store.py
graph_service/workers/: __init__.py  build_worker.py  snapshot_worker.py
scripts/: demo.py  setup.sh
simulation/: __init__.py  agent_memory_provider.py  memory_hooks.py  profile_sync.py
tests/: conftest.py  test_bridge.py  test_cross_sim.py  test_gateway_polymarket_proxy.py  test_gateway_thinker_api.py  test_graph.py  test_graph_service_api.py  test_graph_service_config.py  test_graph_service_jobs.py  test_graphiti_schema_compiler.py  test_graphiti_snapshot_serializer.py  test_mirofish_graph_backend_client.py  test_mirofish_graphiti_switch.py  test_mirofish_persistence.py  test_mirofish_simulation_config_generator.py  test_simulation_memory.py  test_thinker_jobs.py  test_thinker_orchestrator.py
thinker/: __init__.py  api.py  file_ingest.py  jobs.py  materializer.py  models.py  orchestrator.py
thinker/providers/: __init__.py  llm_provider.py  polymarket_provider.py  scrape_provider.py  search_provider.py
(+3 files in other folders)
