[project]
name = "miromem"
version = "0.1.0"
description = "MiroMem - Memory-Driven Prediction Engine (EverMemOS + MiroFish)"
readme = "README.md"
license = "AGPL-3.0"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
    "httpx>=0.25.0",
    "pydantic>=2.5.0",
    "python-multipart>=0.0.9",
    "PyMuPDF>=1.24.0",
    "motor>=3.3.0",
    "pymilvus>=2.4.0",
    "elasticsearch[async]>=8.0.0",
    "redis>=5.0.0",
    "openai>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "pytest-httpx>=0.21",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = [".."]
include = ["miromem*"]
