[project]
name = "miromem"
version = "0.1.0"
description = "MiroMem - Memory-Driven Prediction Engine (EverMemOS + MiroFish)"
readme = "README.md"
license = "AGPL-3.0"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
    "httpx>=0.25.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.0.0",
    "python-multipart>=0.0.9",
    "PyMuPDF>=1.24.0",
    "motor>=3.3.0",
    "pymilvus>=2.4.0",
    "elasticsearch[async]>=8.0.0",
    "redis>=5.0.0",
    "openai>=1.0.0",
    "graphiti-core[falkordb]>=0.28.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "pytest-httpx>=0.21",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = [
    "miromem",
    "miromem.bridge",
    "miromem.config",
    "miromem.evolution",
    "miromem.gateway",
    "miromem.graph",
    "miromem.graph_service",
    "miromem.graph_service.api",
    "miromem.graph_service.core",
    "miromem.graph_service.domain",
    "miromem.graph_service.storage",
    "miromem.graph_service.workers",
    "miromem.simulation",
]
package-dir = { miromem = "." }
